parser.output
Terminals unused in grammar

   COMMENT
   BOOLEAN_CONSTANT


Grammar

    0 $accept: barnameh $end

    1 barnameh: PROGRAM_KW SHENASE tarifha

    2 tarifha: tarifha tarif
    3        | tarif

    4 tarif: tarifeSakhtar
    5      | tarifeMoteghayyer
    6      | tarifeTabe

    7 tarifeSakhtar: STRUCT_KW SHENASE AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW SHENASE AKULAD_BAZ_KW AKULAD_BASTE_KW

    9 tarifhayeMahalli: tarifhayeMahalli tarifeMoteghayyerMahdud
   10                 | tarifeMoteghayyerMahdud

   11 tarifeMoteghayyerMahdud: jenseMahdud tarifhayeMoteghayyerha NOGHTE_VIRGUL

   12 jenseMahdud: CONSTANT_KW jens
   13            | jens

   14 jens: INT_KW
   15     | FLOAT_KW
   16     | CHAR_KW
   17     | BOOLEAN_KW

   18 tarifeMoteghayyer: jens tarifhayeMoteghayyerha NOGHTE_VIRGUL

   19 tarifhayeMoteghayyerha: tarifeMeghdareAvalie
   20                       | tarifhayeMoteghayyerha COMMA tarifeMeghdareAvalie

   21 tarifeMeghdareAvalie: tarifeShenaseMoteghayer
   22                     | tarifeShenaseMoteghayer EQUAL_KW ebarateSade

   23 tarifeShenaseMoteghayer: SHENASE
   24                        | SHENASE BRACKET_BAZ_KW ADAD BRACKET_BASTE_KW

   25 tarifeTabe: jens SHENASE PARANTHESIS_BAZ_KW vorudi PARANTHESIS_BASTE_KW jomle
   26           | jens SHENASE PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW jomle
   27           | SHENASE PARANTHESIS_BAZ_KW vorudi PARANTHESIS_BASTE_KW jomle
   28           | SHENASE PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW jomle

   29 vorudi: vorudiha

   30 vorudiha: vorudiha NOGHTE_VIRGUL jensVorudiha
   31         | jensVorudiha

   32 jensVorudiha: jens shenaseyeVorudiha

   33 shenaseyeVorudiha: shenaseyeVorudiha COMMA shenaseyeVorudi
   34                  | shenaseyeVorudi

   35 shenaseyeVorudi: SHENASE
   36                | SHENASE BRACKET_BAZ_KW BRACKET_BASTE_KW

   37 jomle: jomleyeMorakkab
   38      | jomleyeEbarat
   39      | jomleyeEntekhab
   40      | jomleyeTekrar
   41      | jomleyeBazgasht
   42      | jomleyeShekast

   43 jomleyeMorakkab: AKULAD_BAZ_KW tarifhayeMahalli jomleha AKULAD_BASTE_KW
   44                | AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
   45                | AKULAD_BAZ_KW jomleha AKULAD_BASTE_KW
   46                | AKULAD_BAZ_KW AKULAD_BASTE_KW

   47 jomleha: jomleha jomle
   48        | jomle

   49 jomleyeEbarat: ebarat NOGHTE_VIRGUL
   50              | NOGHTE_VIRGUL

   51 jomleyeEntekhab: IF_KW ebarateSade THEN_KW jomle
   52                | IF_KW ebarateSade THEN_KW jomle ELSE_KW jomle
   53                | KEY_KW PARANTHESIS_BAZ_KW ebarateSade PARANTHESIS_BASTE_KW onsoreHalat onsorePishfarz END_KW
   54                | KEY_KW PARANTHESIS_BAZ_KW ebarateSade PARANTHESIS_BASTE_KW onsoreHalat END_KW

   55 onsoreHalat: SWITCH_KW ADAD DONOGHTE_KW jomle NOGHTE_VIRGUL
   56            | onsoreHalat SWITCH_KW ADAD DONOGHTE_KW jomle NOGHTE_VIRGUL

   57 onsorePishfarz: DEFAULT_KW DONOGHTE_KW jomle NOGHTE_VIRGUL

   58 jomleyeTekrar: WHILE_KW PARANTHESIS_BAZ_KW ebarateSade PARANTHESIS_BASTE_KW jomle

   59 jomleyeBazgasht: RETURN_KW NOGHTE_VIRGUL
   60                | RETURN_KW ebarat NOGHTE_VIRGUL

   61 jomleyeShekast: BREAK_KW NOGHTE_VIRGUL

   62 ebarat: taghirpazir EQUAL_KW ebarat
   63       | taghirpazir PLUS_EQUAL_KW ebarat
   64       | taghirpazir MINU_EQUAL_KW ebarat
   65       | taghirpazir MULTIPLY_EQUAL_KW ebarat
   66       | taghirpazir DEVIDE_EQUAL_KW ebarat
   67       | taghirpazir PLUS_PLUS_KW
   68       | taghirpazir MINUS_MINUS_KW
   69       | ebarateSade

   70 ebarateSade: ebarateSade OR_KW ebarateSade
   71            | ebarateSade AND_KW ebarateSade
   72            | ebarateSade OR_ELSE_KW ebarateSade
   73            | ebarateSade AND_THEN_KW ebarateSade
   74            | ebarateSade NOT_KW ebarateSade
   75            | ebarateRabetei

   76 ebarateRabetei: ebarateRiaziManteghi
   77               | ebarateRiaziManteghi amalgareRabetei ebarateRiaziManteghi

   78 amalgareRabetei: LESS_THAN_KW
   79                | LESS_EQUAL_KW
   80                | MORE_THAN_KW
   81                | MORE_EQUAL_KW
   82                | EQUAL_EQUAL_KW

   83 ebarateRiaziManteghi: ebarateYegani
   84                     | ebarateRiaziManteghi ADD_KW ebarateRiaziManteghi
   85                     | ebarateRiaziManteghi MINUS_KW ebarateRiaziManteghi
   86                     | ebarateRiaziManteghi MULTIPLY_KW ebarateRiaziManteghi
   87                     | ebarateRiaziManteghi DEVIDE_KW ebarateRiaziManteghi
   88                     | ebarateRiaziManteghi MOD_KW ebarateRiaziManteghi

   89 ebarateYegani: amalgareYegani ebarateYegani
   90              | amel

   91 amalgareYegani: MINUS_KW
   92               | MULTIPLY_KW
   93               | QUESTION_KW

   94 amel: taghirpazir
   95     | taghirnapazir

   96 taghirpazir: SHENASE
   97            | taghirpazir BRACKET_BAZ_KW ebarat BRACKET_BASTE_KW
   98            | taghirpazir NOGHTE_KW SHENASE

   99 taghirnapazir: PARANTHESIS_BAZ_KW ebarat PARANTHESIS_BASTE_KW
  100              | sedaZadan
  101              | meghdareSabet

  102 sedaZadan: SHENASE PARANTHESIS_BAZ_KW bordareVorudi PARANTHESIS_BASTE_KW
  103          | SHENASE PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW

  104 bordareVorudi: bordareVorudiha

  105 bordareVorudiha: bordareVorudiha COMMA ebarat
  106                | ebarat

  107 meghdareSabet: ADAD
  108              | FLOAT_KW
  109              | HARFE_SABET
  110              | TRUE_KW
  111              | FALSE_KW


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258)
FLOAT_KW (259) 15 108
INT_KW (260) 14
BOOLEAN_KW (261) 17
CHAR_KW (262) 16
AKULAD_BAZ_KW (263) 7 8 43 44 45 46
AKULAD_BASTE_KW (264) 7 8 43 44 45 46
ADD_KW (265) 84
BOOLEAN_CONSTANT (266)
SWITCH_KW (267) 55 56
END_KW (268) 53 54
DEFAULT_KW (269) 57
BREAK_KW (270) 61
RETURN_KW (271) 59 60
COMMA (272) 20 33 105
PROGRAM_KW (273) 1
STRUCT_KW (274) 7 8
CONSTANT_KW (275) 12
IF_KW (276) 51 52
THEN_KW (277) 51 52
ELSE_KW (278) 52
AND_KW (279) 71
OR_KW (280) 70
NOT_KW (281) 74
WHILE_KW (282) 58
NOGHTE_VIRGUL (283) 11 18 30 49 50 55 56 57 59 60 61
ADAD (284) 24 55 56 107
SHENASE (285) 1 7 8 23 24 25 26 27 28 35 36 96 98 102 103
HARFE_SABET (286) 109
KEY_KW (287) 53 54
MORE_THAN_KW (288) 80
NOGHTE_KW (289) 98
MULTIPLY_KW (290) 86 92
BRACKET_BASTE_KW (291) 24 36 97
BRACKET_BAZ_KW (292) 24 36 97
PARANTHESIS_BASTE_KW (293) 25 26 27 28 53 54 58 99 102 103
PARANTHESIS_BAZ_KW (294) 25 26 27 28 53 54 58 99 102 103
TRUE_KW (295) 110
QUESTION_KW (296) 93
EQUAL_EQUAL_KW (297) 82
EQUAL_KW (298) 22 62
DEVIDE_KW (299) 87
OR_ELSE_KW (300) 72
FALSE_KW (301) 111
AND_THEN_KW (302) 73
MINUS_KW (303) 85 91
DONOGHTE_KW (304) 55 56 57
LESS_EQUAL_KW (305) 79
MOD_KW (306) 88
LESS_THAN_KW (307) 78
MORE_EQUAL_KW (308) 81
PLUS_EQUAL_KW (309) 63
PLUS_PLUS_KW (310) 67
MINUS_MINUS_KW (311) 68
MINU_EQUAL_KW (312) 64
MULTIPLY_EQUAL_KW (313) 65
DEVIDE_EQUAL_KW (314) 66
LOWER_THAN_ELSE_KW (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
barnameh (62)
    on left: 1, on right: 0
tarifha (63)
    on left: 2 3, on right: 1 2
tarif (64)
    on left: 4 5 6, on right: 2 3
tarifeSakhtar (65)
    on left: 7 8, on right: 4
tarifhayeMahalli (66)
    on left: 9 10, on right: 7 9 43 44
tarifeMoteghayyerMahdud (67)
    on left: 11, on right: 9 10
jenseMahdud (68)
    on left: 12 13, on right: 11
jens (69)
    on left: 14 15 16 17, on right: 12 13 18 25 26 32
tarifeMoteghayyer (70)
    on left: 18, on right: 5
tarifhayeMoteghayyerha (71)
    on left: 19 20, on right: 11 18 20
tarifeMeghdareAvalie (72)
    on left: 21 22, on right: 19 20
tarifeShenaseMoteghayer (73)
    on left: 23 24, on right: 21 22
tarifeTabe (74)
    on left: 25 26 27 28, on right: 6
vorudi (75)
    on left: 29, on right: 25 27
vorudiha (76)
    on left: 30 31, on right: 29 30
jensVorudiha (77)
    on left: 32, on right: 30 31
shenaseyeVorudiha (78)
    on left: 33 34, on right: 32 33
shenaseyeVorudi (79)
    on left: 35 36, on right: 33 34
jomle (80)
    on left: 37 38 39 40 41 42, on right: 25 26 27 28 47 48 51 52 55
    56 57 58
jomleyeMorakkab (81)
    on left: 43 44 45 46, on right: 37
jomleha (82)
    on left: 47 48, on right: 43 45 47
jomleyeEbarat (83)
    on left: 49 50, on right: 38
jomleyeEntekhab (84)
    on left: 51 52 53 54, on right: 39
onsoreHalat (85)
    on left: 55 56, on right: 53 54 56
onsorePishfarz (86)
    on left: 57, on right: 53
jomleyeTekrar (87)
    on left: 58, on right: 40
jomleyeBazgasht (88)
    on left: 59 60, on right: 41
jomleyeShekast (89)
    on left: 61, on right: 42
ebarat (90)
    on left: 62 63 64 65 66 67 68 69, on right: 49 60 62 63 64 65 66
    97 99 105 106
ebarateSade (91)
    on left: 70 71 72 73 74 75, on right: 22 51 52 53 54 58 69 70 71
    72 73 74
ebarateRabetei (92)
    on left: 76 77, on right: 75
amalgareRabetei (93)
    on left: 78 79 80 81 82, on right: 77
ebarateRiaziManteghi (94)
    on left: 83 84 85 86 87 88, on right: 76 77 84 85 86 87 88
ebarateYegani (95)
    on left: 89 90, on right: 83 89
amalgareYegani (96)
    on left: 91 92 93, on right: 89
amel (97)
    on left: 94 95, on right: 90
taghirpazir (98)
    on left: 96 97 98, on right: 62 63 64 65 66 67 68 94 97 98
taghirnapazir (99)
    on left: 99 100 101, on right: 95
sedaZadan (100)
    on left: 102 103, on right: 100
bordareVorudi (101)
    on left: 104, on right: 102
bordareVorudiha (102)
    on left: 105 106, on right: 104 105
meghdareSabet (103)
    on left: 107 108 109 110 111, on right: 101


state 0

    0 $accept: . barnameh $end

    PROGRAM_KW  shift, and go to state 1

    barnameh  go to state 2


state 1

    1 barnameh: PROGRAM_KW . SHENASE tarifha

    SHENASE  shift, and go to state 3


state 2

    0 $accept: barnameh . $end

    $end  shift, and go to state 4


state 3

    1 barnameh: PROGRAM_KW SHENASE . tarifha

    FLOAT_KW    shift, and go to state 5
    INT_KW      shift, and go to state 6
    BOOLEAN_KW  shift, and go to state 7
    CHAR_KW     shift, and go to state 8
    STRUCT_KW   shift, and go to state 9
    SHENASE     shift, and go to state 10

    tarifha            go to state 11
    tarif              go to state 12
    tarifeSakhtar      go to state 13
    jens               go to state 14
    tarifeMoteghayyer  go to state 15
    tarifeTabe         go to state 16


state 4

    0 $accept: barnameh $end .

    $default  accept


state 5

   15 jens: FLOAT_KW .

    $default  reduce using rule 15 (jens)


state 6

   14 jens: INT_KW .

    $default  reduce using rule 14 (jens)


state 7

   17 jens: BOOLEAN_KW .

    $default  reduce using rule 17 (jens)


state 8

   16 jens: CHAR_KW .

    $default  reduce using rule 16 (jens)


state 9

    7 tarifeSakhtar: STRUCT_KW . SHENASE AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW . SHENASE AKULAD_BAZ_KW AKULAD_BASTE_KW

    SHENASE  shift, and go to state 17


state 10

   27 tarifeTabe: SHENASE . PARANTHESIS_BAZ_KW vorudi PARANTHESIS_BASTE_KW jomle
   28           | SHENASE . PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW jomle

    PARANTHESIS_BAZ_KW  shift, and go to state 18


state 11

    1 barnameh: PROGRAM_KW SHENASE tarifha .
    2 tarifha: tarifha . tarif

    FLOAT_KW    shift, and go to state 5
    INT_KW      shift, and go to state 6
    BOOLEAN_KW  shift, and go to state 7
    CHAR_KW     shift, and go to state 8
    STRUCT_KW   shift, and go to state 9
    SHENASE     shift, and go to state 10

    $default  reduce using rule 1 (barnameh)

    tarif              go to state 19
    tarifeSakhtar      go to state 13
    jens               go to state 14
    tarifeMoteghayyer  go to state 15
    tarifeTabe         go to state 16


state 12

    3 tarifha: tarif .

    $default  reduce using rule 3 (tarifha)


state 13

    4 tarif: tarifeSakhtar .

    $default  reduce using rule 4 (tarif)


state 14

   18 tarifeMoteghayyer: jens . tarifhayeMoteghayyerha NOGHTE_VIRGUL
   25 tarifeTabe: jens . SHENASE PARANTHESIS_BAZ_KW vorudi PARANTHESIS_BASTE_KW jomle
   26           | jens . SHENASE PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW jomle

    SHENASE  shift, and go to state 20

    tarifhayeMoteghayyerha   go to state 21
    tarifeMeghdareAvalie     go to state 22
    tarifeShenaseMoteghayer  go to state 23


state 15

    5 tarif: tarifeMoteghayyer .

    $default  reduce using rule 5 (tarif)


state 16

    6 tarif: tarifeTabe .

    $default  reduce using rule 6 (tarif)


state 17

    7 tarifeSakhtar: STRUCT_KW SHENASE . AKULAD_BAZ_KW tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW SHENASE . AKULAD_BAZ_KW AKULAD_BASTE_KW

    AKULAD_BAZ_KW  shift, and go to state 24


state 18

   27 tarifeTabe: SHENASE PARANTHESIS_BAZ_KW . vorudi PARANTHESIS_BASTE_KW jomle
   28           | SHENASE PARANTHESIS_BAZ_KW . PARANTHESIS_BASTE_KW jomle

    FLOAT_KW              shift, and go to state 5
    INT_KW                shift, and go to state 6
    BOOLEAN_KW            shift, and go to state 7
    CHAR_KW               shift, and go to state 8
    PARANTHESIS_BASTE_KW  shift, and go to state 25

    jens          go to state 26
    vorudi        go to state 27
    vorudiha      go to state 28
    jensVorudiha  go to state 29


state 19

    2 tarifha: tarifha tarif .

    $default  reduce using rule 2 (tarifha)


state 20

   23 tarifeShenaseMoteghayer: SHENASE .
   24                        | SHENASE . BRACKET_BAZ_KW ADAD BRACKET_BASTE_KW
   25 tarifeTabe: jens SHENASE . PARANTHESIS_BAZ_KW vorudi PARANTHESIS_BASTE_KW jomle
   26           | jens SHENASE . PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW jomle

    BRACKET_BAZ_KW      shift, and go to state 30
    PARANTHESIS_BAZ_KW  shift, and go to state 31

    $default  reduce using rule 23 (tarifeShenaseMoteghayer)


state 21

   18 tarifeMoteghayyer: jens tarifhayeMoteghayyerha . NOGHTE_VIRGUL
   20 tarifhayeMoteghayyerha: tarifhayeMoteghayyerha . COMMA tarifeMeghdareAvalie

    COMMA          shift, and go to state 32
    NOGHTE_VIRGUL  shift, and go to state 33


state 22

   19 tarifhayeMoteghayyerha: tarifeMeghdareAvalie .

    $default  reduce using rule 19 (tarifhayeMoteghayyerha)


state 23

   21 tarifeMeghdareAvalie: tarifeShenaseMoteghayer .
   22                     | tarifeShenaseMoteghayer . EQUAL_KW ebarateSade

    EQUAL_KW  shift, and go to state 34

    $default  reduce using rule 21 (tarifeMeghdareAvalie)


state 24

    7 tarifeSakhtar: STRUCT_KW SHENASE AKULAD_BAZ_KW . tarifhayeMahalli AKULAD_BASTE_KW
    8              | STRUCT_KW SHENASE AKULAD_BAZ_KW . AKULAD_BASTE_KW

    FLOAT_KW         shift, and go to state 5
    INT_KW           shift, and go to state 6
    BOOLEAN_KW       shift, and go to state 7
    CHAR_KW          shift, and go to state 8
    AKULAD_BASTE_KW  shift, and go to state 35
    CONSTANT_KW      shift, and go to state 36

    tarifhayeMahalli         go to state 37
    tarifeMoteghayyerMahdud  go to state 38
    jenseMahdud              go to state 39
    jens                     go to state 40


state 25

   28 tarifeTabe: SHENASE PARANTHESIS_BAZ_KW PARANTHESIS_BASTE_KW . jomle

    FLOAT_KW            shift, and go to state 41
    AKULAD_BAZ_KW       shift, and go to state 42
    BREAK_KW            shift, and go to state 43
    RETURN_KW           shift, and go to state 44
    IF_KW               shift, and go to state 45
    WHILE_KW            shift, and go to state 46
    NOGHTE_VIRGUL       shift, and go to state 47
    ADAD                shift, and go to state 48
    SHENASE             shift, and go to state 49
    HARFE_SABET         shift, and go to state 50
    KEY_KW              shift, and go to state 51
    MULTIPLY_KW         shift, and go to state 52
    PARANTHESIS_BAZ_KW  shift, and go to state 53
    TRUE_KW             shift, and go to state 54
    QUESTION_KW         shift, and go to state 55
    FALSE_KW            shift, and go to state 56
    MINUS_KW            shift, and go to state 57

    jomle                 go to state 58
    jomleyeMorakkab       go to state 59
    jomleyeEbarat         go to state 60
    jomleyeEntekhab       go to state 61
    jomleyeTekrar         go to state 62
    jomleyeBazgasht       go to state 63
    jomleyeShekast        go to state 64
    ebarat                go to state 65
    ebarateSade           go to state 66
    ebarateRabetei        go to state 67
    ebarateRiaziManteghi  go to state 68
    ebarateYegani         go to state 69
    amalgareYegani        go to state 70
    amel                  go to state 71
    taghirpazir           go to state 72
    taghirnapazir         go to state 73
    sedaZadan             go to state 74
    meghdareSabet         go to state 75


state 26

   32 jensVorudiha: jens . shenaseyeVorudiha

    SHENASE  shift, and go to state 76

    shenaseyeVorudiha  go to state 77
    shenaseyeVorudi    go to state 78


state 27

   27 tarifeTabe: SHENASE PARANTHESIS_BAZ_KW vorudi . PARANTHESIS_BASTE_KW jomle

    PARANTHESIS_BASTE_KW  shift, and go to state 79


state 28

   29 vorudi: vorudiha .
   30 vorudiha: vorudiha . NOGHTE_VIRGUL jensVorudiha

    NOGHTE_VIRGUL  shift, and go to state 80

    $default  reduce using rule 29 (vorudi)


state 29

   31 vorudiha: jensVorudiha .

    $default  reduce using rule 31 (vorudiha)


state 30

   24 tarifeShenaseMoteghayer: SHENASE BRACKET_BAZ_KW . ADAD BRACKET_BASTE_KW

    ADAD  shift, and go to state 81


state 31

   25 tarifeTabe: jens SHENASE PARANTHESIS_BAZ_KW . vorudi PARANTHESIS_BASTE_KW jomle
   26           | jens SHENASE PARANTHESIS_BAZ_KW . PARANTHESIS_BASTE_KW jomle

    FLOAT_KW              shift, and go to state 5
    INT_KW                shift, and go to state 6
    BOOLEAN_KW            shift, and go to state 7
    CHAR_KW               shift, and go to state 8
    PARANTHESIS_BASTE_KW  shift, and go to state 82

    jens          go to state 26
    vorudi        go to state 83
    vorudiha      go to state 28
    jensVorudiha  go to state 29


state 32

   20 tarifhayeMoteghayyerha: tarifhayeMoteghayyerha COMMA . tarifeMeghdareAvalie

    SHENASE  shift, and go to state 84
